# shap_example

./: lgbm_tree.ipynb  pyproject.toml  shap_01.ipynb  shap_アジ.ipynb
