[tool.poetry]
name = "shap-example"
version = "0.1.0"
description = ""
authors = ["aoda"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy ="^1.25"
scikit-learn ="^1.3"
matplotlib = "^3.8"
japanize-matplotlib = "^1.1.3"
pandas = "^2.1"
seaborn = "^0.12"
lightgbm = "^4.1.0"
shap = "^0.42.1"
notebook = "^7.0.4"
graphviz = "^0.20.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
